--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /tests/Unit/DataProviders
 /.phpunit.result.cache
 /config/database.php
+/config/api.php
 /tests/Unit/Plugins
 /cron.log
 /app/Validator.php
